deployment/kubernetes-laravel.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: dad-group-10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: api
          image: registry-172.22.21.115.sslip.io/dad-group-10/api:v1.1.1
          resources: {}

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
  namespace: dad-group-10
spec:
  ports:
    - port: 80
  selector:
    app: laravel-app
