deployment/kubernetes-vue.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
  namespace: dad-group-10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
        - name: web
          image: registry-172.22.21.115.sslip.io/dad-group-10/web:v1.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: vue-app
  namespace: dad-group-10
spec:
  ports:
    - port: 80
  selector:
    app: vue-app
