deployment/kubernetes-ws.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-server
  namespace: dad-group-10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-server
  template:
    metadata:
      labels:
        app: websocket-server
    spec:
      containers:
        - name: web
          image: registry-172.22.21.115.sslip.io/dad-group-10/ws:v1.3.0
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: websocket-server
  namespace: dad-group-10
spec:
  ports:
    - port: 3000
  selector:
    app: websocket-server
